--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script type="module" defer src="../puppeteer.ts"></script>
   <title>Document</title>
 </head>
 
@@ -14,8 +15,23 @@
     <p class="bg-red">OOOOOOOOo</p>
   </header>
 
+  <span class="flex justify-center items-center my-4 px-4">
+    <form action="/results" method="post" class="flex w-full max-w-xs sm:max-w-md border-white border-2 rounded-lg">
+
+      <input
+        class="w-full p-2 bg-black rounded-l-lg focus:outline-none text-center text-white"
+        placeholder="Digite uma ação. Ex.: PETR4, GGBR4, SNAG11"
+        type="text"
+        name="name"
+      />
+
+      <button type="submit">Enviar</button>
+    </form>
+  </span>
+
+
   <% if(true) {%>
-    <h2>Helooo</h2>
+    <h2><%= teste %></h2>
     <% } %>
 </body>
 
