--- a/views/results.ejs
+++ b/views/results.ejs
@@ -6,8 +6,10 @@
   <title>Document</title>
 </head>
 <body>
+  <%- include('./components/header') %>
+  <%- include('./components/search_bar') %>
   <div>
-    <%=  data.token %>
+    <%=  data %>
   </div>
 </body>
 </html>
