--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,27 +6,15 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="module" defer src="../puppeteer.ts"></script>
-  <title>Document</title>
+  <title>CK | Ações</title>
 </head>
 
 <body class="body">
-  <header class="text-center py-4 border-2 rounded-b-md border-black">
-    <h1 class="text-xl text-white">Resumo</h1>
-    <p class="bg-red">OOOOOOOOo</p>
-  </header>
+  
+  <%- include('./components/header') %>
 
   <span class="flex justify-center items-center my-4 px-4">
-    <form action="/results" method="post" class="flex w-full max-w-xs sm:max-w-md border-white border-2 rounded-lg">
-
-      <input
-        class="w-full p-2 bg-black rounded-l-lg focus:outline-none text-center text-white"
-        placeholder="Digite uma ação. Ex.: PETR4, GGBR4, SNAG11"
-        type="text"
-        name="name"
-      />
-
-      <button type="submit">Enviar</button>
-    </form>
+    <%- include('./components/search_bar') %>
   </span>
 
 
