--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,4 +1,5 @@
 <header class="text-center py-4 border-2 rounded-b-md border-black">
-  <h1 class="text-xl text-white">Resumo</h1>
-  <p class="bg-red">OOOOOOOOo</p>
+  <h1 class="text-xl">
+    Resumo
+  </h1>
 </header>
