--- a/views/components/search_bar.ejs
+++ b/views/components/search_bar.ejs
@@ -1,11 +1,16 @@
-<form action="/:name" method="post" class="flex w-full max-w-xs sm:max-w-md border-white border-2 rounded-lg">
+<form action="/" method="post" class="flex w-full max-w-xs sm:max-w-md border-white border-2 rounded-lg bg-black">
 
   <input
-    class="w-full p-2 bg-black rounded-l-lg focus:outline-none text-center text-white"
+    autocomplete="off"
+    class="w-full p-2 rounded-l-lg bg-inherit focus:outline-none text-white"
     placeholder="Digite uma ação. Ex.: PETR4, GGBR4, SNAG11"
     type="text"
     name="name"
   />
 
-  <button type="submit">Enviar</button>
+  <button type="submit" class="flex justify-center cursor-pointer px-2 items-center rounded-r-lg">
+    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 50 50" fill='#FFFFFF'>
+      <path d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z"></path>
+    </svg>
+  </button>
 </form>
