--- a/src/views/components/search_bar.ejs
+++ b/src/views/components/search_bar.ejs
@@ -5,7 +5,7 @@
     class="w-full p-2 rounded-l-lg bg-inherit focus:outline-none text-white"
     placeholder="Digite uma ação. Ex.: PETR4, GGBR4, SNAG11"
     type="text"
-    name="name"
+    name="token"
   />
 
   <button type="submit" class="flex justify-center cursor-pointer px-2 items-center rounded-r-lg">
