--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -17,13 +17,15 @@
     <%- include('./components/search_bar') %>
   </div>
 
-  <% if(data === undefined) {%>
+  <% if(stocks === undefined) {%>
     <div class="flex justify-center items-center">
       Busque por um token para obter resultados...
     </div>
   <%} else {%>
     <div class="flex flex-col space-y-4 justify-center sm:space-y-0 sm:grid sm:gap-4 sm:grid-cols-2 lg:gap-8 lg:grid-cols-3 px-4">
-      <%- include('./components/stock', {token: data.token, href: data.href, src: data.src, targetPrice: data.targetPrice, recomendation: data.recomendation, date: data.date}) %>
+      <% for (const data of stocks) {%>
+        <%- include('./components/stock', {token: data.token, href: data.href, src: data.src, targetPrice: data.targetPrice, recomendation: data.recomendation, date: data.date}) %>
+      <%} %>
     </div>
   <%}%>
 
