--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -6,8 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <%- include('./components/header') %>
-  <%- include('./components/search_bar') %>
+  <%- include("./components/header") %>
+  <%- include("./components/search_bar") %>
   <div>
     <%=  data %>
   </div>
