--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script type="module" defer src="../puppeteer.ts"></script>
+  
   <title>CK | Ações</title>
 </head>
 
-<body class="body">
+<body>
   
   <%- include("./components/header") %>
 
