--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,6 +28,7 @@
       <%} %>
       
       <%- include("./components/cambio", {name: stocks.bradesco.name, src: stocks.bradesco.src, href: stocks.bradesco.href,date: stocks.bradesco.date, table: stocks.bradesco.table}) %>
+      <%-  include("./components/itau") %>
     </div>
   <%}%>
 
